--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "jspdf-autotable": "^5.0.2",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-icons": "^5.5.0",
     "react-router": "^7.9.5",
     "react-toastify": "^11.0.5",
+    "react-tooltip": "^5.30.0",
     "swiper": "^12.0.3",
     "tailwindcss": "^4.1.17"
   },
